[project]
name = "rwa-tools"
version = "0.1.3"
description = "A Python package for applying the Rotating Wave Approximation (RWA) to multi-level quantum systems, providing symbolic Hamiltonian representations and transformations"
readme = "README.md"
authors = [
    { name = "ograsdijk", email = "o.grasdijk@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.5",
    "sympy>=1.14.0",
]
license = "MIT"
repository  = ["https://github.com/ograsdijk/rwa-tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
